--- a/index.html
+++ b/index.html
@@ -78,13 +78,28 @@
             </ul>
         </li>
     </ul> -->
-    <button id="btn1">
+    <!-- <h1>JQuery Data APIs</h1> -->
+    <!-- <button id="btn1">
         Attach Data to div element
     </button><br>
     <button id="btn2">
         Get data attached to div element
     </button>
-    <div></div>
+    <div></div> -->
+
+    <h1>JQuery Effects</h1>
+    <div class="color-box after">
+        After
+    </div>
+    <div class="color-box before">
+        Before
+    </div>
+    <div class="color-box append">
+        append
+    </div>
+    <div class="color-box prepend">
+        prepend
+    </div>
     <!-- **************************** -->
     <!-- Javascript JQuery Code -->
     <!-- **************************** -->
